
NEW FEATURES

   o    merge.data.table works more like merge.data.frame.
        (i) suffixes are now consistent with merge.data.frame.
        Existing users may set the datatable.pre.suffixes option to TRUE for
        backwards compatibility, eg. `options(datatable.pre.suffixes=TRUE)`.
        (ii) support for `by` argument added (FR #1315).

BUG FIXES

   o    by=key(DT) now works when the number of rows is not
        divisible by the number of groups (#1298, an odd bug).
        Thanks to Steve Lianoglou for reporting.

USER-VISIBLE CHANGES

   o    Additions and updates to FAQ vignette


        *********************************************
        **                                         **
        **   CHANGES IN DATA.TABLE VERSION 1.5.3   **
        **                                         **
        *********************************************       

NEW FEATURES

   o    .SD no longer includes 'by' columns, FR#978. This resolves
        the long standing annoyance of duplicated 'by' columns
        when the j expression returns a subset of rows from .SD. 
        For example, the following query no longer contains
        a redundant 'colA.1' duplicate.
            DT[,.SD[2],by=colA] #  2nd row of each group
        Any existing code that uses .SD may require simple
        changes to remove workarounds.

   o    'by' may now be a character vector of column names.
        This allows syntax such as DT[,sum(x),by=key(DT)].

   o    X[Y] now includes Y's non-join columns, as most users
        naturally expect, FR#746. Please do use j in one step
        (i.e. X[Y,j]) since that merges just the columns j uses and
        is much more efficient than X[Y][,j] or merge(X,Y)[,j].

   o    The 'Join Inherited Scope' feature is back on, FR#1095. This
        is consistent with X[Y] including Y's non-join columns, enabling
        natural progression from X[Y] to X[Y,j]. j sees columns in X
        first then Y. 