@@ -144,8 +144,7 @@ User reviews: \url{http://crantastic.org/packages/data-table}\cr
 column called \code{"keep"} containing \code{TRUE} and this is correct behaviour; \code{data.table(DF,keep.rownames=TRUE)} was intended.
 }
 \seealso{ \code{\link{data.frame}}, \code{\link{[.data.frame}}, \code{\link{as.data.table}}, \code{\link{setkey}}, \code{\link{J}}, \code{\link{SJ}}, \code{\link{CJ}}, \code{\link{merge.data.table}}, \code{\link{tables}}, \code{\link{test.data.table}}, \code{\link{IDateTime}}
-\if{html}{\out{<!-- Start of StatCounter Code -->
-<script type="text/javascript">
+\if{html}{\out{<script type="text/javascript">
 var sc_project=6237851; 
 var sc_invisible=1; 
 var sc_security="518c93ca"; 
@@ -156,8 +155,7 @@ src="http://www.statcounter.com/counter/counter.js"></script>
 statistics" href="http://statcounter.com/free-web-stats/"
 target="_blank"><img class="statcounter"
 src="http://c.statcounter.com/6237851/0/518c93ca/1/"
-alt="web statistics"></a></div></noscript>
-<!-- End of StatCounter Code -->}}}
+alt="web statistics"></a></div></noscript>}}}
 \examples{
 \dontrun{
 example(data.table)  # to run these examples at the prompt}
